turtleart.circleten.CircleTen.scala.error
Compilation error:
CircleTen:1: error: expected start of definition
override run() {
         ^